Finish placeholder logic, finish placeholder entities, add authentication, add authorization

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=backend
+# PostgreSQL configuration.
+spring.datasource.url=jdbc:postgresql://localhost:5432/placeholder
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.tomcat.uri-encoding=UTF-8
+
+# SSL
+server.port=8443
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=changeit
+server.ssl.key-store-type=PKCS12
+
+# Ciphers
+server.ssl.enabled-protocols=TLSv1.2,TLSv1.3
+server.ssl.ciphers=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
