--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,21 +1,28 @@
 spring.application.name=backend
 # PostgreSQL configuration.
-spring.datasource.url=jdbc:postgresql://localhost:5432/placeholder
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.tomcat.uri-encoding=UTF-8
-
 # SSL
 server.port=8443
 server.ssl.key-store=classpath:keystore.p12
-server.ssl.key-store-password=changeit
+server.ssl.key-store-password=${KEYSTORE_PASSWORD}
 server.ssl.key-store-type=PKCS12
-
 # Ciphers
 server.ssl.enabled-protocols=TLSv1.2,TLSv1.3
 server.ssl.ciphers=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+# Email Configuration
+spring.mail.username=${SMTP_USERNAME}
+spring.mail.host=${SMTP_HOST}
+spring.mail.port=587
+spring.mail.password=${SMTP_PASSWORD}
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.starttls.enable=true
